--- a/index.html
+++ b/index.html
@@ -192,8 +192,14 @@
       </p>
       <p>Contact us</p>
       <address>
-        <a href="tel:+380684439426">+380 (68) 443-94-26</a>
+        <ul>
+          <li>
+        <a href="tel:+380684439426">+380 (68) 443-94-26</a></li>
+        <li>
         <a href="mailto=simplycthoc@gmail.com">simplycthoc@gmail.com</a>
+      </li>
+       </ul> 
+
       </address>
     </footer>
   </body>
