add styles text

--- a/index.html
+++ b/index.html
@@ -4,54 +4,71 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chocolate</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href=""
-          >SIMPLY CHOCOLATE <img src="./images/chocolate.png" alt="logo"
+    <header class="header-page">
+      <nav class="header-navigation">
+        <a class="logo" href=""
+          ><span class="logo-part">SIMPLY</span> CHOCOLATE
+          <img src="./images/chocolate.png" alt="logo"
         /></a>
-        <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">How it’s made?</a></li>
-          <li><a href="">Chocolate is loved</a></li>
+        <ul class="header-nav-list">
+          <li class="header-nav-item">
+            <a class="header-nav-link" href="">Home</a>
+          </li>
+          <li class="header-nav-item">
+            <a class="header-nav-link" href="">How it’s made?</a>
+          </li>
+          <li class="header-nav-item">
+            <a class="header-nav-link" href="">Chocolate is loved</a>
+          </li>
         </ul>
       </nav>
-      <ul>
-        <li>
-          <a href=""
+      <ul class="header-soc-list">
+        <li class="header-soc-item">
+          <a class="header-soc-link" href=""
             ><img src="./images/instagram.png" alt="icon instagram"
           /></a>
         </li>
-        <li>
-          <a href=""><img src="./images/Vector.png" alt="icon twitter" /></a>
+        <li class="header-soc-item">
+          <a class="header-soc-link" href=""
+            ><img src="./images/Vector.png" alt="icon twitter"
+          /></a>
         </li>
       </ul>
     </header>
-    <main>
-      <section>
-        <h1>
+    <main class="main-page">
+      <section class="hero">
+        <h1 class="hero-title">
           Treat yourself or a loved one to our finest ingredients for a moment
           of pure delight!
         </h1>
-        <button type="button">Buy now</button>
-        <a href="#made">How it’s made</a>
-        <a href="#">scroll down</a>
+        <button class="hero-buttun" type="button">Buy now</button>
+        <a class="hero-ancor-link" href="#made">How it’s made</a>
+        <a class="hero-scroll-link" href="#">scroll down</a>
       </section>
-      <section>
-        <ul>
-          <li>
-            <h3>Unsurpassed taste</h3>
-            <p>
+      <section class="features">
+        <h2 class="visually-hidden">Advantages</h2>
+        <ul class="features-list">
+          <li class="features-item">
+            <h3 class="features-list-title">Unsurpassed taste</h3>
+            <p class="features-list-text">
               Crafted with the finest quality cocoa beans and a dedication to
               perfection, each bite is a decadent experience that simply cannot
               be matched. Savor the richness and complexity of our Unsurpassed
               Taste and discover a new level of chocolate bliss.
             </p>
           </li>
-          <li>
-            <h3>Affordable price</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="features-list-title">Affordable price</h3>
+            <p class="features-list-text">
               Indulge in high-quality chocolate without breaking the bank with
               Simply Chocolate's selection of affordable treats. Enjoy
               mouth-watering truffles and velvety chocolate bars without
@@ -59,9 +76,9 @@
               affordable luxury today.
             </p>
           </li>
-          <li>
-            <h3>Own production</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="features-list-title">Own production</h3>
+            <p class="features-list-text">
               We take pride in our own production process, ensuring that every
               step is carefully crafted to perfection. From selecting the finest
               ingredients to handcrafting each piece, our attention to detail is
@@ -70,137 +87,186 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>IT ALL ADDS UP TO ONE EXCEPTIONAL <span>TASTE</span> SENSATION</h2>
-        <p>
+      <section class="taste">
+        <h2 class="taste-title">
+          IT ALL ADDS UP TO ONE EXCEPTIONAL <span>TASTE</span> SENSATION
+        </h2>
+        <p class="taste-text">
           At Simply Chocolate, we believe that the secret to exceptional
           chocolate is in the details. From the sourcing of the finest
           ingredients to the careful crafting of each individual piece, every
           step of our process adds up to one exceptional taste sensation.
         </p>
-        <ul>
-          <li>
+        <ul class="taste-list">
+          <li class="taste-item">
             <img
+              class="taste-list-image"
               src="./images/milkchocolate.png"
               alt="chocolate pieces"
               width="206"
               height="160"
             />
-            <h3>mILK CHOCOLATE</h3>
+            <h3 class="taste-list-title">mILK CHOCOLATE</h3>
           </li>
-          <li>
+          <li class="taste-item">
             <img
+              class="taste-list-image"
               src="./images/milk.png"
               alt="bottle of milk"
               width="206"
               height="160"
             />
-            <h3>Milk</h3>
+            <h3 class="taste-list-title">Milk</h3>
           </li>
-          <li>
-            <img src="./images/nuts.png" alt="nuts" width="206" height="160" />
-            <h3>nuts</h3>
-          </li>
-          <li>
+          <li class="taste-item">
             <img
+              class="taste-list-image"
+              src="./images/nuts.png"
+              alt="nuts"
+              width="206"
+              height="160"
+            />
+            <h3 class="taste-list-title">nuts</h3>
+          </li>
+          <li class="taste-item">
+            <img
+              class="taste-list-image"
               src="./images/cofe.png"
               alt="coffee"
               width="206"
               height="160"
             />
-            <h3>sEMI - SWEET CHOCOLATE</h3>
+            <h3 class="taste-list-title">sEMI - SWEET CHOCOLATE</h3>
           </li>
         </ul>
       </section>
-      <section id="made">
-        <h2>hOW IT’S made?</h2>
+      <section id="made" class="made">
+        <h2 class="made-title">hOW IT’S <span>made?</span></h2>
         <img
+          class="made-image"
           src="./images/image-min.jpg"
           alt="hot chocolate"
           width="600"
           height="400"
         />
-        <h3>
+        <h3 class="made-subtitle">
           Try our chocolates today and discover the perfect balance of flavor
         </h3>
-        <ul>
-          <li>
-            <p>
+        <ul class="made-list">
+          <li class="made-item">
+            <p class="made-list-text">
               Heat the milk in a saucepan without bringing it to a boil. Add
               sugar and cocoa powder.
             </p>
           </li>
-          <li>
-            <p>
+          <li class="made-item">
+            <p class="made-list-text">
               At the same time, prepare a water bath. Melt the butter on it.
             </p>
           </li>
-          <li>
-            <p>
+          <li class="made-item">
+            <p class="made-list-text">
               "Mix" the milk mixture and already liquid butter. Mix thoroughly
               with a silicone spatula so that the mass becomes uniform and
               silky.
             </p>
           </li>
-          <li>
-            <p>Heat the mixture over low heat, letting it barely boil.</p>
+          <li class="made-item">
+            <p class="made-list-text">
+              Heat the mixture over low heat, letting it barely boil.
+            </p>
           </li>
-          <li>
-            <p>
+          <li class="made-item">
+            <p class="made-list-text">
               Pour the chocolate into special containers (can be replaced with
               ice molds). Allow to cool and harden.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>chocolate is loved</h2>
-        <ul>
-          <li>
-            <img src="./images/Victoria.jpg" alt="Victoria Dobrzhanska" width="80" height="80" />
-            <h3>Victoria Dobrzhanska</h3>
-            <p>
+      <section class="reviews">
+        <h2 class="reviews-title"><span>chocolate</span> is loved</h2>
+        <ul class="reviews-list">
+          <li class="reviews-item">
+            <img
+              class="reviews-item-images"
+              src="./images/Victoria.jpg"
+              alt="Victoria Dobrzhanska"
+              width="80"
+              height="80"
+            />
+            <h3 class="reviews-list-title">Victoria Dobrzhanska</h3>
+            <p class="reviews-list-text">
               I love this chocolate bar. Perfect combination of light crispy
               wafer, covered in a thin layer chocolate.
             </p>
           </li>
-          <li>
-            <img src="./images/Nazar.jpg" alt="Nazar Babenko" width="80" height="80" />
-            <h3>Nazar Babenko</h3>
-            <p>
+          <li class="reviews-item">
+            <img
+              class="reviews-item-images"
+              src="./images/Nazar.jpg"
+              alt="Nazar Babenko"
+              width="80"
+              height="80"
+            />
+            <h3 class="reviews-list-title">Nazar Babenko</h3>
+            <p class="reviews-list-text">
               This chocolate confection is a delight! A delight! The wafer is
               light and crisp, the hazelnut cream is smooth, and the chocolate
               is good.
             </p>
           </li>
-          <li>
-            <img src="./images/Olena.jpg" alt="Olena Kampusch" width="80" height="80" />
-            <h3>Olena Kampusch</h3>
-            <p>
+          <li class="reviews-item">
+            <img
+              class="reviews-item-images"
+              src="./images/Olena.jpg"
+              alt="Olena Kampusch"
+              width="80"
+              height="80"
+            />
+            <h3 class="reviews-list-title">Olena Kampusch</h3>
+            <p class="reviews-list-text">
               Chocolate is a family favourite treat. Love the delicious smooth
               chocolate and the creaminess inside. The wafer is soft but
               crunchy.
             </p>
           </li>
         </ul>
-        <button type="button">Leave  a review</button>
+        <button type="button" class="reviews-botton">Leave a review</button>
       </section>
     </main>
-    <footer>
-      <p>
-        Chocolate a delicious cure for a bad day
+    <footer class="footer-page">
+      <p class="footer-title">
+        <span>Chocolate</span> a delicious cure for a bad day
       </p>
-      <p>Contact us</p>
-      <address>
-        <ul>
-          <li>
-        <a href="tel:+380684439426">+380 (68) 443-94-26</a></li>
-        <li>
-        <a href="mailto=simplycthoc@gmail.com">simplycthoc@gmail.com</a>
-      </li>
-       </ul> 
-
+      <p class="footer-text">Contact us</p>
+      <address class="footer-adress">
+        <ul class="footer-adress-list">
+          <li class="footer-adress-item">
+            <a class="footer-adress-link" href="tel:+380684439426"
+              >+380 (68) 443-94-26</a
+            >
+          </li>
+          <li class="footer-adress-item">
+            <a class="footer-adress-link" href="mailto=simplycthoc@gmail.com"
+              >simplycthoc@gmail.com</a
+            >
+          </li>
+        </ul>
       </address>
+      <nav class="footer-navigation">
+        <ul class="footer-navigation-list">
+          <li class="footer-navigation-item">
+            <a href="" class="footer-navigation-link">Home</a>
+          </li>
+          <li class="footer-navigation-item">
+            <a href="" class="footer-navigation-link">How it’s made?</a>
+          </li>
+          <li class="footer-navigation-item">
+            <a href="" class="footer-navigation-link">Chocolate is loved</a>
+          </li>
+        </ul>
+      </nav>
     </footer>
   </body>
 </html>
